--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,33 +1,83 @@
 ---
+# defaults file for ansible-role-raspi-config
 
 # perform full update+upgrade
 raspi_config_update_packages: true
-# have the FS fill the SD card
-raspi_config_expanded_filesystem: true
-# how much memory should be owned by the GPU (vs RAM)
-raspi_config_memory_split_gpu: 16
+
 # currently sets Pi2 OC setting if applicable
 raspi_config_ensure_optimal_cpu_params: true
+
+
+# 2. Network Options
+
+# set hostname
+raspi_config_network_hostname: pi
+raspi_config_network_netnames: no
+
+# 3. Boot Options
+
+raspi_config_boot_behaviour: "B1" #B1 cli, B2 cli autologin, B3 desktop, B4 desktop autologin
+raspi_config_boot_wait: no #False
+raspi_config_boot_splash: no #False
+
+# 4. Localisation Options
+
 # set global locale
-raspi_config_locale: en_US.UTF-8
+raspi_config_localisation_locale: en_AU.UTF-8
 # set timezone
-raspi_config_timezone: UTC
+raspi_config_localisation_timezone: UTC #i.e. UTC, Europe/London, Australia/Adelaide
 # list of services that should be restarted if the timezone is changed
 raspi_config_timezone_dependent_services: []
-# set hostname
-raspi_config_hostname: pi
-# ensure camera support is on - CURRENTLY UNVERIFIED
-raspi_config_enable_camera: false
+# set keyboard layout
+raspi_config_localisation_keyboard_layout: "us" #default "gb"
+# set Wifi country
+raspi_config_localisation_wifi_country: "AU"
+
+# 5. Interface Options
+
+raspi_config_interface_enable_camera: no
+raspi_config_interface_enable_ssh: yes
+raspi_config_interface_enable_vnc: no
+raspi_config_interface_enable_spi: no
+raspi_config_interface_enable_i2c: no
+raspi_config_interface_enable_serial: no
+raspi_config_interface_enable_onewire: no
+raspi_config_interface_enable_rgpio: no
+
+# 7. Advanced Options
+
+# have the FS fill the SD card
+raspi_config_expanded_filesystem: true
+raspi_config_advanced_overscan: no # False
+# how much memory should be owned by the GPU (vs RAM)
+raspi_config_memory_split_gpu: 16
+raspi_config_advanced_audio_out: "0" #0 Auto, 1 Force 3.5mm, 2 Force hdmi
+raspi_config_advanced_pixel_doubling: no
+raspi_config_advanced_gldriver: False #G1 Full KMS, G2 Fake KMS, G3 Legacy
+raspi_config_OVERCLOCK: False
+raspi_config_HDMI_GROUP: False
+raspi_config_HDMI_MOD: False
+
+
 # specify whether to fail deployment when user/password is default
 # ignored if "raspi_config_replace_user" is set (warning will still display)
 raspi_config_fail_on_auth_test: true
+
 # user to replace the default "pi" user with
 # NOTE: if you use this for the first time as "pi", any post_tasks will fail!
 raspi_config_replace_user:
   name:
   # LOCAL path to your public key file
   path_to_ssh_key:
+
 # wait this many seconds before forcing connection retry after reboot
 raspi_config_reboot_max_wait_time: 300
+
 # use this to add any additional options to the config in raw form
 raspi_config_other_options: {}
+
+
+
+
+
+
