--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,12 +1,39 @@
 ---
 # defaults file for ansible-role-raspi-config
 
+# specify whether to fail deployment when user/password is default
+# ignored if "raspi_config_replace_user" is set (warning will still display)
+raspi_config_fail_on_auth_test: true
+
+# user to replace the default "pi" user with
+# NOTE: if you use this for the first time as "pi", any post_tasks will fail!
+raspi_config_replace_user:
+  name:
+  # LOCAL path to your public key file
+  path_to_ssh_key:
+
+# wait this many seconds before forcing connection retry after reboot
+raspi_config_reboot_max_wait_time: 300
+
+raspi_config_bluetooth_services: [
+  bluetooth,
+  bluealsa,
+  hciuart,
+]
+
+raspi_config_unwanted_services: [
+  bluetooth,
+  avahi-daemon,
+  triggerhappy
+]
+
 # perform full update+upgrade
 raspi_config_update_packages: true
 
 # currently sets Pi2 OC setting if applicable
 raspi_config_ensure_optimal_cpu_params: true
 
+# 1. User Password
 
 # 2. Network Options
 
@@ -33,7 +60,7 @@ raspi_config_localisation_keyboard_layout: "us" #default "gb"
 # set Wifi country
 raspi_config_localisation_wifi_country: "AU"
 
-# 5. Interface Options
+# 5. Interfacing Options
 
 raspi_config_interface_enable_camera: no
 raspi_config_interface_enable_ssh: yes
@@ -43,6 +70,8 @@ raspi_config_interface_enable_i2c: no
 raspi_config_interface_enable_serial: no
 raspi_config_interface_enable_onewire: no
 raspi_config_interface_enable_rgpio: no
+
+# 6. Overclock Options
 
 # 7. Advanced Options
 
@@ -57,27 +86,3 @@ raspi_config_advanced_gldriver: False #G1 Full KMS, G2 Fake KMS, G3 Legacy
 raspi_config_OVERCLOCK: False
 raspi_config_HDMI_GROUP: False
 raspi_config_HDMI_MOD: False
-
-
-# specify whether to fail deployment when user/password is default
-# ignored if "raspi_config_replace_user" is set (warning will still display)
-raspi_config_fail_on_auth_test: true
-
-# user to replace the default "pi" user with
-# NOTE: if you use this for the first time as "pi", any post_tasks will fail!
-raspi_config_replace_user:
-  name:
-  # LOCAL path to your public key file
-  path_to_ssh_key:
-
-# wait this many seconds before forcing connection retry after reboot
-raspi_config_reboot_max_wait_time: 300
-
-# use this to add any additional options to the config in raw form
-raspi_config_other_options: {}
-
-
-
-
-
-
