--- a/meta/main.yml
+++ b/meta/main.yml
@@ -16,11 +16,11 @@ dependencies:
   - name: "oefenweb.locales"
     version: "v1.0.16"
     locales_present:
-      - "{{ raspi_config_locale }}"
+      - "{{ raspi_config_localisation_locale }}"
     locales_default:
       lang:
-        - "{{ raspi_config_locale }}"
+        - "{{ raspi_config_localisation_locale }}"
 
   - role: "Stouts.hostname"
     version: "1.1.0"
-    hostname_hostname: "{{ raspi_config_hostname }}"
+    hostname_hostname: "{{ raspi_config_network_hostname }}"
