Added the ability to create users

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,12 @@ raspi_config_replace_user:
   # LOCAL path to your public key file
   path_to_ssh_key:
 
+# a dictionary of users to create
+# Note: Can be used instead of replace user
+# e.g. raspi_config_create_users:
+#        - { name: 'piaware', path_to_ssh_key: "{{ playbook_dir }}/../../ssh_keys/{{ raspi_config_hostname }}.pub" }
+raspi_config_create_users:
+
 # wait this many seconds before forcing connection retry after reboot
 raspi_config_reboot_max_wait_time: 300
 
