--- a/tasks/get-info.yml
+++ b/tasks/get-info.yml
@@ -1,10 +1,11 @@
 ---
 
 - name: Get Raspberry Pi type
-  shell: "raspi-config nonint get_pi_type"
+  ansible.builtin.shell: "raspi-config nonint get_pi_type"
   register: pi_type
   changed_when: False
 
 - name: Show pi version
-  debug:
+  ansible.builtin.debug:
     msg: "Pi version: {{ pi_type.stdout }}"
+    verbosity: 1
