--- a/tasks/asserts.yml
+++ b/tasks/asserts.yml
@@ -18,26 +18,26 @@
 # ],
 
 - name: Assert an ARM processor
-  assert:
+  ansible.builtin.assert:
     that:
       ansible_architecture.find('v=' ~ 'arm') == -1
 
 - name: Assert distribution is Debian type
-  assert:
+  ansible.builtin.assert:
     that:
       ansible_distribution.find('v=' ~ 'Debian') == -1
 
 - name: Assert OS is Raspbian
-  assert:
+  ansible.builtin.assert:
     that:
       ansible_lsb.id.find('v=' ~ 'Raspbian') == -1
 
 - name: Assert raspi-config exists
-  stat:
+  ansible.builtin.stat:
     path: /usr/bin/raspi-config
   register: stat_result
 
 - name: Assert raspi-config exists
-  assert:
+  ansible.builtin.assert:
     that:
       stat_result.stat.exists
