--- a/tasks/zram.yml
+++ b/tasks/zram.yml
@@ -10,7 +10,7 @@
 - name: Run the install script
   become: true
   ansible.builtin.command:
-    cmd: /tmp/zram-swap-config/install.sh
+    cmd: 'cd /tmp/zram-swap-config && ./install.sh'
 
 - name: Cleanup installation files
   ansible.builtin.file:
