--- a/tasks/zram.yml
+++ b/tasks/zram.yml
@@ -9,8 +9,7 @@
 
 - name: Run the install script
   become: true
-  ansible.builtin.command:
-    cmd: 'cd /tmp/zram-swap-config && ./install.sh'
+  ansible.builtin.command: "cd /tmp/zram-swap-config && ./install.sh"
 
 - name: Cleanup installation files
   ansible.builtin.file:
@@ -18,5 +17,4 @@
     state: absent
 
 - name: Disable default swap device
-  ansible.builtin.command:
-    cmd: 'dphys-swapfile swapoff && dphys-swapfile uninstall && update-rc.d dphys-swapfile disable'
+  ansible.builtin.command: "dphys-swapfile swapoff && dphys-swapfile uninstall && update-rc.d dphys-swapfile disable"
