--- a/templates/zram-swap-config.conf
+++ b/templates/zram-swap-config.conf
@@ -6,7 +6,7 @@ MEM_FACTOR=40
 # DRIVE_FACTOR = Virtual uncompressed zram drive size = estimate approx alg compression ratio an results and is the % of the Memfactor
 DRIVE_FACTOR=200
 # COMP_ALG lz4 is faster than lzo but some distro's show compile and operation difference and in use lzo depending on binary may be faster
-COMP_ALG=lzo-rle
+COMP_ALG=lz4
 # SWAP_DEVICES = number of indivial drives sharing memeory provided by MEM_FACTOR each device support multiple streams 1 large drive is generally better
 SWAP_DEVICES=1
 # SWAP_PRI = swap_priority for each drive 75 is a hig order preference and should be well above other swap drives
