--- a/tasks/get-info.yml
+++ b/tasks/get-info.yml
@@ -1,11 +1,12 @@
 ---
 
 - name: Get Raspberry Pi type
-  ansible.builtin.shell: "raspi-config nonint get_pi_type"
+  #bug ansible FQDN: https://github.com/ansible/ansible/pull/71824
+  #ansible.builtin.command: raspi-config nonint get_pi_type
+  command: raspi-config nonint get_pi_type
   register: pi_type
   changed_when: False
 
 - name: Show pi version
-  ansible.builtin.debug:
+  debug:
     msg: "Pi version: {{ pi_type.stdout }}"
-    verbosity: 1
