--- a/tasks/raspi-config-6-overclock.yml
+++ b/tasks/raspi-config-6-overclock.yml
@@ -12,5 +12,6 @@
   debug:
     msg: "Overclock is: {{ pi_overclock.stdout }}"
 
-  #- name: Set overclock
-  #shell: "raspi-config nonint do_overclock {{ OVERCLOCK }}"
+- name: Set overclock
+  shell: "raspi-config nonint do_overclock {{ OVERCLOCK }}"
+  when: raspi_config_overclock
