--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -90,4 +90,5 @@ raspi_config_advanced_pixel_doubling: no
 raspi_config_advanced_gldriver: no # False #G1 Full KMS, G2 Fake KMS, G3 Legacy
 raspi_config_advanced_hdmi_group: no # False
 raspi_config_advanced_hdmi_mod: no # False
-raspi_config_interface_vnc: no
+raspi_config_advanced_audio_out: 0 #0 Auto #1 Force 3.5mm jack #2 Force HDMI
+raspi_config_advanced_swapfile: 1 #0 to disable swap file
