--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,9 +18,6 @@ raspi_config_replace_user:
 #        - { name: 'piaware', path_to_ssh_key: "{{ playbook_dir }}/../../ssh_keys/{{ raspi_config_hostname }}.pub" }
 raspi_config_create_users:
 
-# wait this many seconds before forcing connection retry after reboot
-raspi_config_reboot_max_wait_time: 300
-
 raspi_config_bluetooth_services: [
   bluetooth,
   bluealsa,
@@ -92,3 +89,8 @@ raspi_config_advanced_hdmi_group: no # False
 raspi_config_advanced_hdmi_mod: no # False
 raspi_config_advanced_audio_out: 0 #0 Auto #1 Force 3.5mm jack #2 Force HDMI
 raspi_config_advanced_swapfile: 1 #0 to disable swap file
+
+#Number of seconds to wait before starting to poll
+raspi_config_reboot_min_time: 5
+# wait this many seconds before forcing connection retry after reboot
+raspi_config_reboot_max_wait_time: 300
