--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,7 +12,7 @@ galaxy_info:
     - development
     - system
 
-dependencies:
+dependencies: []
   # - name: "oefenweb.locales"
   #   version: "v1.0.16"
   #   locales_present:
