--- a/meta/main.yml
+++ b/meta/main.yml
@@ -12,15 +12,7 @@ galaxy_info:
     - development
     - system
 
-dependencies: []
-  # - name: "oefenweb.locales"
-  #   version: "v1.0.16"
-  #   locales_present:
-  #     - "{{ raspi_config_localisation_locale }}"
-  #   locales_default:
-  #     lang:
-  #       - "{{ raspi_config_localisation_locale }}"
+dependencies: [ ]
 
-  # - role: "Stouts.hostname"
-  #   version: "1.1.0"
-  #   hostname_hostname: "{{ raspi_config_network_hostname }}"
+collections:
+  - name: ansible.posix.authorized_keys
